# bin2c

./: README.md  meson.build
src/: main.cpp
